--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ branches:
 deploy:
   provider: pages
   skip-cleanup: true
-  github-token: $GITHUB_TOKEN
+  github-token: $GITHUB_TOKENN
   keep-history: true
   target_branch: master
   on:
